Add factory girl, rename feature

--- a/cyoa/congress_app/app/views/bills/index.html.erb
+++ b/cyoa/congress_app/app/views/bills/index.html.erb
@@ -1,3 +1,9 @@
-<%= "Welcome to the Congressional Good Deeds Feed" %>
+<!DOCTYPE html>
+<html>
+<h1><%="Welcome to the Congressional Good Deeds Feed" %></h1>
 <br/>
 <%= "Filter deeds by bill"%>
+<%= "Filter deeds by legislation"%>
+<%= "Filter deeds by congress person"%>
+
+</html>
