--- a/cyoa/congress_app/app/views/bills/index.html.erb
+++ b/cyoa/congress_app/app/views/bills/index.html.erb
@@ -1,9 +1,26 @@
-<!DOCTYPE html>
-<html>
-<h1><%="Welcome to the CongressionalGood Deeds Feed" %></h1>
-<br/>
-<%= "Filter deeds by bill"%>
-<%= "Filter deeds by legislation"%>
-<%= "Filter deeds by congress person"%>
 
-</html>
+<h1><%="Capitol Hill Bills" %></h1>
+<h2> TBD</h2>
+
+<% if user_signed_in?%>
+  Logged in as <%=current_user.email%>
+  <%=link_to "Sign out", destroy_user_session_path, method: :delete%>
+  <% else %>
+  <p> <%= link_to "Sign In", new_user_session_path%></p>
+  <p> <%= link_to "Register", new_user_registration_path %></p>
+  <%end%>
+
+<%= form_tag () do %>
+<%=text_field_tag(:search_string) %>
+<%=submit_tag "Search" %>
+<%end%>
+
+
+
+<%@results.each do|result|%>
+<div class="container">
+ <p><span class="category">Title:</span> <%=link_to result[:title], result %><br/></p>
+ <p><span class="category">Introduced On:</span> <%=result[:introduced_on]%></p>
+ <br/>
+</div>
+<%end%>
