--- a/cyoa/congress_app/app/views/bills/show.html.erb
+++ b/cyoa/congress_app/app/views/bills/show.html.erb
@@ -1,4 +1,4 @@
 
 
-<p><span class="category">Title:</span> <%= result[:title], result %><br/></p>
-<p><span class="category">Introduced On:</span> <%=result[:introduced_on]%></p>
+<p><span class="category">Title:</span> <%= @bills[:official_title]%><br/></p>
+<p><span class="category">Introduced On:</span> <%=@bills[:introduced_on]%> </p>
