Delete controller tests, add mailers and track button

--- a/cyoa/congress_app/app/views/bills/show.html.erb
+++ b/cyoa/congress_app/app/views/bills/show.html.erb
@@ -2,3 +2,4 @@
 
 <p><span class="category">Title:</span> <%= @bills[:official_title]%><br/></p>
 <p><span class="category">Introduced On:</span> <%=@bills[:introduced_on]%> </p>
+<button type ="button">Track bill</button>
